--- a/index.html
+++ b/index.html
@@ -24,28 +24,28 @@
             </tr>
             <tr>
                 <th>Task-1</th>
-                <td><a href="https://github.com/dhruv23099/word-counter-reactjs" class="btn btn-primary">Repo Link-1</a></td>
-                <td><a href="https://dhruv23099.github.io/word-counter-reactjs/" class="btn btn-warning">Website Link-1</a></td>
+                <td><a href=https://github.com/dhruv23099/wordcounter-reactjs" class="btn btn-primary">Repo Link-1</a></td>
+                <td><a href="https://dhruv23099.github.io/wordcounter-reactjs/" class="btn btn-warning">Website Link-1</a></td>
             </tr>
             <tr>
                 <th>Task-2</th>
-                <td><a href="https://github.com/dhruv23099/calculator-reactjs-main" class="btn btn-primary">Repo Link-2</a></td>
-                <td><a href="https://dhruv23099.github.io/calculator-reactjs-main/" class="btn btn-warning">Website Link-2</a></td>
+                <td><a href="https://github.com/dhruv23099/calculator-reactjs" class="btn btn-primary">Repo Link-2</a></td>
+                <td><a href="https://dhruv23099.github.io/calculator-reactjs/" class="btn btn-warning">Website Link-2</a></td>
             </tr>
             <tr>
                 <th>Task-3</th>
-                <td><a href="https://github.com/dhruv23099/color-picker-react-main" class="btn btn-primary">Repo Link-3</a></td>
-                <td><a href="https://dhruv23099.github.io/color-picker-react-main/" class="btn btn-warning">Website Link-3</a></td>
+                <td><a href="https://github.com/dhruv23099/colorpicker-react" class="btn btn-primary">Repo Link-3</a></td>
+                <td><a href="https://dhruv23099.github.io/colorpicker-react/" class="btn btn-warning">Website Link-3</a></td>
             </tr>
             <tr>
                 <th>Task-4</th>
-                <td><a href="https://github.com/dhruv23099/use-of-axios-reactjs-main" class="btn btn-primary">Repo Link-4</a></td>
-                <td><a href="https://dhruv23099.github.io/use-of-axios-reactjs-main/" class="btn btn-warning">Website Link-4</a></td>
+                <td><a href="https://github.com/dhruv23099/axios-reactjs" class="btn btn-primary">Repo Link-4</a></td>
+                <td><a href="https://dhruv23099.github.io/axios-reactjs/" class="btn btn-warning">Website Link-4</a></td>
             </tr>
             <tr>
                 <th>Task-5</th>
-                <td><a href="https://github.com/dhruv23099/age-calculator-reactjs-main" class="btn btn-primary">Repo Link-5</a></td>
-                <td><a href="https://dhruv23099.github.io/age-calculator-reactjs-main/" class="btn btn-warning">Website Link-5</a></td>
+                <td><a href="https://github.com/dhruv23099/agecalculator-reactjs" class="btn btn-primary">Repo Link-5</a></td>
+                <td><a href="https://dhruv23099.github.io/agecalculator-reactjs/" class="btn btn-warning">Website Link-5</a></td>
             </tr>
           
         </table>
